# SC4020-Group-Project-2

./: .gitignore  README.md  REPOSITORY_STRUCTURE.md  app.py  demo.py  pyproject.toml  requirements.txt
data/: WBCD_attributeInfo.txt  sample_patient_queries.txt
docs/: REPOSITORY_STRUCTURE.md  analysis.md  cancer_pattern_mining.md  processors.md  random_forest_training.md  symptom_analysis.md  task3_implementation_plan.md
notebooks/task1/: symptom_analysis.ipynb  symptom_analysis_executed.ipynb  symptom_analysis_working.ipynb
notebooks/task2/: cancer_pattern_mining.ipynb  cancer_pattern_mining_executed.ipynb
notebooks/task3/: symptom_disease_model.ipynb  task3_diagnostic_assistant.ipynb
outputs/: analysis_summary.txt  association_rules.pkl  disease_frequent_itemsets.pkl  feature_importance.txt  frequent_itemsets.pkl
outputs/models/: .gitkeep  symptom_vocabulary.json
outputs/task3_tool1/: disease_frequent_itemsets.pkl
outputs/task3_tool2/: feature_selector_20251106_001604.pkl  random_forest_model_20251106_001604.pkl  training_results_20251106_001604.txt
outputs/vectorstore/: .gitkeep
sc4020_project_2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: cancer_pattern_mining.py  execute_task3_phase4.py  execute_task3_phases.py  symptom_analysis.py  task3_app.py  train_random_forest.py
src/analysis/: __init__.py  base.py  evaluation.py  pattern_mining.py  (+1 more)
src/crew/: base.py  (+9 more)
tests/: test_crew_system.py  test_feature_selector.py  test_pattern_mining.py  test_random_forest_classifier.py  test_sequence_generation.py
webapp/: README.md  __init__.py
(+15 files in other folders)
